--- a/.eslintrc
+++ b/.eslintrc
@@ -40,6 +40,7 @@
         "indent": ["error", 4, { "ignoredNodes": ["ConditionalExpression"], "SwitchCase": 1 }],
         "import/first": 0,
         "import/newline-after-import": ["error", { "count": 1 }],
+        "import/no-cycle": 0,
         "import/prefer-default-export": 0,
         "jsx-a11y/click-events-have-key-events": 0,
         "max-len": [
