--- a/package.json
+++ b/package.json
@@ -70,8 +70,12 @@
     },
     "dependencies": {
         "@babel/runtime-corejs3": "7.21.5",
-        "@material-ui/core": "4.12.4",
-        "@material-ui/icons": "4.11.3",
+        "@emotion/react": "11.11.0",
+        "@emotion/styled": "11.11.0",
+        "@fontsource/roboto": "4.5.8",
+        "@fontsource/ubuntu-mono": "4.5.11",
+        "@mui/icons-material": "5.11.16",
+        "@mui/material": "5.12.3",
         "@reduxjs/toolkit": "1.9.5",
         "axios": "1.4.0",
         "body-parser": "1.20.2",
