--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
         "regenerator-runtime": "0.13.11",
         "serialize-javascript": "6.0.1",
         "uuid": "9.0.0",
+        "web-vitals": "3.3.1",
         "ws": "8.13.0"
     },
     "devDependencies": {
