--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
         "eslint-plugin-jsx-a11y": "6.7.1",
         "eslint-plugin-destructuring": "2.2.1",
         "eslint-plugin-react": "7.32.2",
+        "eslint-webpack-plugin": "4.0.1",
         "file-loader": "6.2.0",
         "jest": "29.5.0",
         "jest-environment-jsdom": "29.5.0",
