--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -41,17 +41,17 @@ jobs:
           docker ps -a
           \
           echo "Installing dependencies..."
-          echo "$(grep -v '"cypress":' package.json)" >package.json
-          docker-compose -f docker-compose.ci.yml exec -T node echo "" && npm i --legacy-peer-deps --foreground-scripts
+          echo "$(grep -v '"cypress":' package.json)" > package.json
+          docker-compose -f docker-compose.ci.yml exec -T node npm i --foreground-scripts
+          \
+          echo "Running build process..."
+          docker-compose -f docker-compose.ci.yml exec -T node npm run build:ci
           \
           echo "Running linting..."
           docker-compose -f docker-compose.ci.yml exec -T node npm run lint
           \
           echo "Running unit tests..."
           docker-compose -f docker-compose.ci.yml exec -T node npm run test:ci
-          \
-          echo "Running build process..."
-          docker-compose -f docker-compose.ci.yml exec -T node npm run build:ci
           \
           echo "Running audit..."
           docker-compose -f docker-compose.ci.yml exec -T node npm run audit:ci
