--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -24,14 +24,13 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Run linting, unit tests, build process, e2e tests and audit
+      - name: Run build, linting, tests and audit
         env:
           IS_DOCKER: 1
           TZ: Australia/Sydney
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_ACCESS_TOKEN: ${{ secrets.DOCKER_ACCESS_TOKEN }}
         # Remove cypress since we will run that in its own container anyway.
-        # NOTE: using `echo "" &&` below otherwise the commands fail. Need to work out why this happens.
         run: |
           export USER_ID=`id -u`
           export GROUP_ID=`id -g`
@@ -39,6 +38,8 @@ jobs:
           docker-compose -f docker-compose.ci.yml down
           docker-compose -f docker-compose.ci.yml up -d --build
           docker ps -a
+          echo "USER_ID=$USER_ID USER_NAME=`id -un`"
+          echo "GROUP_ID=$GROUP_ID GROUP_NAME=`id -gn`"
           \
           echo "Installing dependencies..."
           echo "$(grep -v '"cypress":' package.json)" > package.json
